--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,24 +9,6 @@ on:
 
 jobs:
 
-  Build:
-    name: Build
-    runs-on: ubuntu-20.04
-    strategy:
-      fail-fast: false
-      matrix:
-        distro: [ubuntu.20.04]
-        compiler: [gcc]
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        submodules: true
-    - name: Build ${{ matrix.distro }} Docker image with ${{ matrix.compiler }}
-      run: docker build . -f utils/docker/Dockerfile.${{ matrix.distro }}
-                          --build-arg COMPILER=${{ matrix.compiler }}
-                          -t ${{ matrix.distro }}/${{ matrix.compiler }}/daos:${{ github.sha }}
-
   # Prepare docker images containing base software, plus deps.
   Prepare:
     name: Prepare images
@@ -107,9 +89,9 @@ jobs:
       #with:
       #  github_token: ${{ secrets.GITHUB_TOKEN }}
       #  files: test_results/*.xml
+    - name: Run NLT Test
+      run: docker run --mount type=tmpfs,destination=/mnt/daos,tmpfs-mode=1777 build-image ./utils/node_local_test.py --no-root kv
+    - name: Run FI Test
+      run: docker run --mount type=tmpfs,destination=/mnt/daos,tmpfs-mode=1777 build-image ./utils/node_local_test.py --no-root fi
     - name: Rebuild on tmpfs
       run: docker run --mount type=tmpfs,destination=/mnt/daos,tmpfs-mode=1777 build-image scons BUILD_ROOT=/mnt/daos PREFIX=/opt/daos --jobs 10 COMPILER=clang
-    - name: Run NLT Test
-      run: |
-              docker run --mount type=tmpfs,destination=/mnt/daos,tmpfs-mode=1777 build-image ./utils/node_local_test.py --no-root kv
-              docker run --mount type=tmpfs,destination=/mnt/daos,tmpfs-mode=1777 build-image ./utils/node_local_test.py --no-root fi
