--- a/utils/docker/Dockerfile.ubuntu.20.04
+++ b/utils/docker/Dockerfile.ubuntu.20.04
@@ -77,8 +77,9 @@ ARG JOBS=$DEPS_JOBS
 ARG COMPILER=gcc
 
 # Build DAOS
+# BUILD_TYPE=debug does not work.
 RUN [ "$DAOS_BUILD" != "yes" ] || \
-    (scons --jobs $JOBS install PREFIX=/opt/daos COMPILER=$COMPILER TARGET_TYPE=debug BUILD_TYPE=debug && \
+    (scons --jobs $JOBS install PREFIX=/opt/daos COMPILER=$COMPILER TARGET_TYPE=debug BUILD_TYPE=devel && \
     /bin/rm -rf build && \
     cp -r utils/config/examples /opt/daos)
 
