--- a/utils/docker/Dockerfile.ubuntu.20.04
+++ b/utils/docker/Dockerfile.ubuntu.20.04
@@ -79,7 +79,7 @@ ARG COMPILER=gcc
 # Build DAOS
 # BUILD_TYPE=debug does not work.
 RUN [ "$DAOS_BUILD" != "yes" ] || \
-    (scons --jobs $JOBS install PREFIX=/opt/daos COMPILER=$COMPILER TARGET_TYPE=debug BUILD_TYPE=devel && \
+    (scons --jobs $JOBS install PREFIX=/opt/daos COMPILER=$COMPILER TARGET_TYPE=debug BUILD_TYPE=dev && \
     /bin/rm -rf build && \
     cp -r utils/config/examples /opt/daos)
 
