--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,8 @@ jobs:
     - uses: satackey/action-docker-layer-caching@v0.0.11
       continue-on-error: true
       with:
-        key: dos-${{ env.CACHE_KEY }}-${{ matrix.distro }}-{hash}
-        restore-keys: dos-${{ env.CACHE_KEY }}-${{ matrix.distro }}-
+        key: dos2-${{ env.CACHE_KEY }}-${{ matrix.distro }}-{hash}
+        restore-keys: dos2-${{ env.CACHE_KEY }}-${{ matrix.distro }}-
     - name: Build base Docker image
       run: docker build . -f utils/docker/Dockerfile.${{ matrix.distro }}
                           --build-arg DAOS_DEPS_BUILD=no --build-arg UID
@@ -64,7 +64,7 @@ jobs:
         key: dos-${{ env.CACHE_KEY }}-${{ matrix.distro }}-{hash}
         restore-keys: dos-${{ env.CACHE_KEY }}-${{ matrix.distro }}-
         skip-save: true
-    - name: re-build deps image
+    - name: Update dependencies in image.
       run: docker build . -f utils/docker/Dockerfile.${{ matrix.distro }}
                           --build-arg DAOS_BUILD=no --build-arg DEPS_JOBS=10
                           --build-arg UID
@@ -92,6 +92,6 @@ jobs:
     - name: Run NLT Test
       run: docker run --mount type=tmpfs,destination=/mnt/daos,tmpfs-mode=1777 build-image ./utils/node_local_test.py --no-root kv
     - name: Run FI Test
-      run: docker run --cap-add SYS_ADMIN --device /dev/fuse --mount type=tmpfs,destination=/mnt/daos,tmpfs-mode=1777 build-image ./utils/node_local_test.py --no-root fi
+      run: docker run --cap-add SYS_ADMIN --cap-add NET_ADMIN --device /dev/fuse --mount type=tmpfs,destination=/mnt/daos,tmpfs-mode=1777 build-image ./utils/node_local_test.py --no-root fi
     - name: Rebuild on tmpfs
       run: docker run --mount type=tmpfs,destination=/mnt/daos,tmpfs-mode=1777 build-image scons BUILD_ROOT=/mnt/daos PREFIX=/opt/daos --jobs 10 COMPILER=clang
