--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,8 @@ jobs:
     - uses: satackey/action-docker-layer-caching@v0.0.11
       continue-on-error: true
       with:
-        key: dos2-${{ env.CACHE_KEY }}-${{ matrix.distro }}-{hash}
-        restore-keys: dos2-${{ env.CACHE_KEY }}-${{ matrix.distro }}-
+        key: dos3-${{ env.CACHE_KEY }}-${{ matrix.distro }}-{hash}
+        restore-keys: dos3-${{ env.CACHE_KEY }}-${{ matrix.distro }}-
     - name: Build base Docker image
       run: docker build . -f utils/docker/Dockerfile.${{ matrix.distro }}
                           --build-arg DAOS_DEPS_BUILD=no --build-arg UID
@@ -61,19 +61,19 @@ jobs:
     - uses: satackey/action-docker-layer-caching@v0.0.11
       continue-on-error: true
       with:
-        key: dos2-${{ env.CACHE_KEY }}-${{ matrix.distro }}-{hash}
-        restore-keys: dos2-${{ env.CACHE_KEY }}-${{ matrix.distro }}-
+        key: dos3-${{ env.CACHE_KEY }}-${{ matrix.distro }}-{hash}
+        restore-keys: dos3-${{ env.CACHE_KEY }}-${{ matrix.distro }}-
         skip-save: true
     - name: Update dependencies in image.
       run: docker build . -f utils/docker/Dockerfile.${{ matrix.distro }}
                           --build-arg DAOS_BUILD=no --build-arg DEPS_JOBS=10
                           --build-arg UID
-    - name: Build daos
-      run: docker build . -f utils/docker/Dockerfile.${{ matrix.distro }}
-                          --build-arg COMPILER=${{ matrix.compiler }}
-                          --build-arg DAOS_JAVA_BUILD=no --build-arg DEPS_JOBS=10
-                          --build-arg UID
-                          -t build-image
+    #- name: Build daos
+    #  run: docker build . -f utils/docker/Dockerfile.${{ matrix.distro }}
+    #                      --build-arg COMPILER=${{ matrix.compiler }}
+    #                      --build-arg DAOS_JAVA_BUILD=no --build-arg DEPS_JOBS=10
+    #                      --build-arg UID
+    #                      -t build-image
       #    - name: Run Unit Tests
       #run: docker run --name build-ut --tmpfs /mnt/daos build-image ./utils/run_test.sh
       #- name: mkdir
@@ -89,8 +89,8 @@ jobs:
       #with:
       #  github_token: ${{ secrets.GITHUB_TOKEN }}
       #  files: test_results/*.xml
-    - name: Run NLT Test
-      run: docker run --mount type=tmpfs,destination=/mnt/daos,tmpfs-mode=1777 build-image ./utils/node_local_test.py --no-root kv
+      #- name: Run NLT Test
+      #run: docker run --mount type=tmpfs,destination=/mnt/daos,tmpfs-mode=1777 build-image ./utils/node_local_test.py --no-root kv
     #- name: Run FI Test
     # run: docker run --cap-add SYS_ADMIN --cap-add NET_ADMIN --device /dev/fuse --mount type=tmpfs,destination=/mnt/daos,tmpfs-mode=1777 build-image ./utils/node_local_test.py --no-root fi
       #- name: Rebuild on tmpfs
