--- a/utils/docker/Dockerfile.ubuntu.20.04
+++ b/utils/docker/Dockerfile.ubuntu.20.04
@@ -20,32 +20,30 @@ RUN apt-get update &&							\
 	python3-dev golang-go git libyaml-dev python3-tabulate		\
 	python3-pyxattr openjdk-8-jdk maven libipmctl-dev 		\
 	libcunit1-dev libopenmpi-dev numactl doxygen && 		\
-    apt-get clean all
+    apt-get clean all && locale-gen en_US.UTF-8
 
 # hack the default shell to bash instead of dash
-RUN rm /bin/sh && ln -s bash /bin/sh
+#RUN rm /bin/sh && ln -s bash /bin/sh
 
-RUN locale-gen en_US.UTF-8
+#RUN locale-gen en_US.UTF-8
 
 # use Java 8 instead of default Java 11
-RUN update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java
+#RUN update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java
 
 ARG UID=1000
 
 # Add DAOS users
-RUN useradd --uid $UID --user-group --create-home --shell /bin/bash --home /home/daos daos_server
-RUN echo "daos_server:daos_server" | chpasswd
-RUN useradd --user-group --create-home --shell /bin/bash daos_agent
-RUN echo "daos_agent:daos_agent" | chpasswd
+RUN useradd --uid $UID --user-group --create-home --shell /bin/bash --home /home/daos daos_server && \
+    useradd --user-group --create-home --shell /bin/bash daos_agent
+#RUN echo "daos_server:daos_server" | chpasswd
+#RUN echo "daos_agent:daos_agent" | chpasswd
 
 # Create directory for DAOS backend storage
-RUN mkdir -p /opt/daos && chown -R daos_server.daos_server /opt/daos
-RUN mkdir /mnt/daos && chown daos_server.daos_server /mnt/daos
-RUN mkdir /var/run/daos_server && chown daos_server.daos_server /var/run/daos_server
-RUN mkdir /var/run/daos_agent && chown daos_agent.daos_agent /var/run/daos_agent
+RUN mkdir -p /opt/daos && chown -R daos_server.daos_server /opt/daos && \
+ mkdir /mnt/daos && chown daos_server.daos_server /mnt/daos && \
+ mkdir /var/run/daos_server && chown daos_server.daos_server /var/run/daos_server && \
+ mkdir /var/run/daos_agent && chown daos_agent.daos_agent /var/run/daos_agent
 
-ARG CACHEBUST=1
-RUN apt-get -y upgrade && apt-get clean all
 
 # Control what to build.  By default Dockerfiles build everything to allow for
 # ease-of-use for users, however in CI everything is turned off and then
@@ -60,32 +58,31 @@ WORKDIR /home/daos/pre
 COPY --chown=daos_server:daos_server SConstruct .
 COPY --chown=daos_server:daos_server utils/sl utils/sl
 COPY --chown=daos_server:daos_server utils/build.config utils/
-RUN ln -s utils/sl site_scons
 
-RUN [ "$DAOS_DEPS_BUILD" != "yes" ] || \
+RUN ln -s utils/sl site_scons && [ "$DAOS_DEPS_BUILD" != "yes" ] || \
     (scons --build-deps=yes --jobs $DEPS_JOBS PREFIX=/opt/daos --deps-only BUILD_TYPE=debug && \
     /bin/rm -rf build *.gz)
 
-WORKDIR /home/daos/daos/
-COPY --chown=daos_server:daos_server VERSION LICENSE ftest.sh SConstruct ./
-COPY --chown=daos_server:daos_server utils utils
-COPY --chown=daos_server:daos_server src src
-RUN ln -s utils/sl site_scons
+#WORKDIR /home/daos/daos/
+#COPY --chown=daos_server:daos_server VERSION LICENSE ftest.sh SConstruct ./
+#COPY --chown=daos_server:daos_server utils utils
+#COPY --chown=daos_server:daos_server src src
+#RUN ln -s utils/sl site_scons
 
-ARG DAOS_BUILD=$DAOS_DEPS_BUILD
-ARG JOBS=$DEPS_JOBS
-ARG COMPILER=gcc
+#ARG DAOS_BUILD=$DAOS_DEPS_BUILD
+#ARG JOBS=$DEPS_JOBS
+#ARG COMPILER=gcc
 
 # Build DAOS
 # BUILD_TYPE=debug does not work.
-RUN [ "$DAOS_BUILD" != "yes" ] || \
-    (scons --jobs $JOBS install PREFIX=/opt/daos COMPILER=$COMPILER TARGET_TYPE=debug BUILD_TYPE=dev && \
-    /bin/rm -rf build && \
-    cp -r utils/config/examples /opt/daos)
+#RUN [ "$DAOS_BUILD" != "yes" ] || \
+#    (scons --jobs $JOBS install PREFIX=/opt/daos COMPILER=$COMPILER TARGET_TYPE=debug BUILD_TYPE=dev && \
+#    /bin/rm -rf build && \
+#    cp -r utils/config/examples /opt/daos)
 
-USER root:root
-RUN [ "$DAOS_BUILD" != "yes" ] || (. utils/sl/setup_local.sh && ./utils/setup_daos_admin.sh)
-USER daos_server:daos_server
+#USER root:root
+#RUN [ "$DAOS_BUILD" != "yes" ] || (. utils/sl/setup_local.sh && ./utils/setup_daos_admin.sh)
+#USER daos_server:daos_server
 
 # Set environment variables
 ENV LD_LIBRARY_PATH=/opt/daos/lib:/opt/daos/lib64:/opt/daos/bin/../lib64/daos_srv/../../prereq/debug/spdk/lib/:$LD_LIBRARY_PATH
