--- a/utils/docker/Dockerfile.ubuntu.20.04
+++ b/utils/docker/Dockerfile.ubuntu.20.04
@@ -63,6 +63,8 @@ RUN ln -s utils/sl site_scons && [ "$DAOS_DEPS_BUILD" != "yes" ] || \
     (scons --build-deps=yes --jobs $DEPS_JOBS PREFIX=/opt/daos --deps-only BUILD_TYPE=debug && \
     /bin/rm -rf build *.gz)
 
+COPY --chown=daos_server:daos_server utils/run_in_ga.sh utils/
+
 #WORKDIR /home/daos/daos/
 #COPY --chown=daos_server:daos_server VERSION LICENSE ftest.sh SConstruct ./
 #COPY --chown=daos_server:daos_server utils utils
