Check contents of cache before creating.
Signed-off-by: Ashley Pittman <ashley@pittman.co.uk>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,5 +19,8 @@ jobs:
         path: built
         key: daos-built
 
+    - name: Check
+      run: find built
+
     - name: Compress
       run: mkdir built && tar -cvf built/out.tar utils
