Use upstream names.
Signed-off-by: Ashley Pittman <ashley@pittman.co.uk>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,14 +33,14 @@ jobs:
 
     steps:
       - name: Fetch cache
-        id: pull-cache
+        id: cache-primes
         uses: actions/cache@v2
         with:
           path: built
           key: daos-deadend
           restore-keys: daos-built-
       - name: Backup
-        if: steps.pull-cache.outputs.cache-hit != 'true'
+        if: steps.cache-primes.outputs.cache-hit != 'true'
         run: mkdir built && echo NO > built/date.txt
 
       - name: Check cache
