--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,7 @@ jobs:
         skip-save: true
     - name: Set UID
       run: echo UID=`id -u` >> $GITHUB_ENV
-    - name: Check for new:
+    - name: Check for new and rebuild.
       if: steps.cache-restore.outputs.cache-hit != 'true':
       run: docker build . -f utils/docker/Dockerfile.ubuntu.20.04
                           --build-arg DAOS_DEPS_BUILD=no --build-arg UID
