--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,7 @@ jobs:
     - uses: satackey/action-docker-layer-caching@v0.0.11
       with:
         key: docker-images-test-${{ hashFiles('utils', 'src', 'SConstruct', '.github') }}
+        restore-keys: docker-images-test-
     - name: Set UID
       run: echo UID=`id -u` >> $GITHUB_ENV
     - name: Build base Docker image
