--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,8 +63,6 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-      with:
-        submodules: true
     - name: Restore Cache
       id: cache-restore
       uses: satackey/action-docker-layer-caching@v0.0.11
@@ -82,7 +80,9 @@ jobs:
       run: docker build . -f utils/docker/Dockerfile.ubuntu.20.04
                           --build-arg UID
                           --build-arg COMPILER=${{ matrix.compiler }}
-
+                          --tag builder
+    - name: Run something
+      run: docker run builder ls
 
   # Checkout a version of the cache, read the contents.  As there
   # doesn't seem to be a way to read but not save the cache then
