--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,17 +36,15 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
-      with:
-        submodules: true
     - uses: satackey/action-docker-layer-caching@v0.0.11
       with:
-        key: docker-images-test-${{ hashFiles('utils', 'src', 'SConstruct') }}
+        key: docker-${{ hashFiles('utils/sl', 'utils/docker', 'utils/build.config', 'SConstruct') }}
     - name: Set UID
       run: echo UID=`id -u` >> $GITHUB_ENV
-    - name: Build base Docker image
-      run: docker build . -f utils/docker/Dockerfile.ubuntu.20.04
-                          --build-arg DAOS_DEPS_BUILD=no --build-arg UID
-    - name: Build DAOS dependencies
+      #    - name: Build base image
+      #run: docker build . -f utils/docker/Dockerfile.ubuntu.20.04
+      #                    --build-arg DAOS_DEPS_BUILD=no --build-arg UID
+    - name: Build DAOS dependencies in image
       run: docker build . -f utils/docker/Dockerfile.ubuntu.20.04
                           --build-arg DAOS_BUILD=no --build-arg UID
 
@@ -63,12 +61,14 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Restore Cache
       id: cache-restore
       uses: satackey/action-docker-layer-caching@v0.0.11
       with:
-        key: docker-images-test-${{ hashFiles('utils', 'src', 'SConstruct') }}
-        restore-keys: docker-images-test-
+        key: docker-${{ hashFiles('utils/sl', 'utils/docker', 'utils/build.config', 'SConstruct') }}
+        restore-keys: docker-
         skip-save: true
     - name: Set UID
       run: echo UID=`id -u` >> $GITHUB_ENV
