--- a/utils/docker/Dockerfile.ubuntu.20.04
+++ b/utils/docker/Dockerfile.ubuntu.20.04
@@ -35,8 +35,8 @@ RUN useradd --uid $UID --user-group --create-home --shell /bin/bash --home /home
    echo "daos_agent:daos_agent" | chpasswd
 
 # Create directory for DAOS backend storage
-RUN mkdir -p /opt/daos /mnt/daos /var/run/daos_server /var/run/daos_agent &&	\
-    chown daos_server.daos_server /opt/daos /mnt/daos /var/run/daos_server &&	\
+RUN mkdir -p /opt/daos /mnt/daos /var/run/daos_server /var/run/daos_agent /home/daos/pre &&	\
+    chown daos_server.daos_server /opt/daos /mnt/daos /var/run/daos_server /home/daos/pre &&	\
     chown daos_agent.daos_agent /var/run/daos_agent
 
 # Control what to build.  By default Dockerfiles build everything to allow for
@@ -51,6 +51,7 @@ ARG NOBUILD=no
 # root then run a chown command which is frustrating as the copy can take a few
 # seconds.
 WORKDIR /home/daos/pre
+RUN chown daos_server.daos_server
 COPY --chown=daos_server:daos_server SConstruct .
 COPY --chown=daos_server:daos_server utils/sl utils/sl
 COPY --chown=daos_server:daos_server utils/build.config utils/
