--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Remove container
       run: docker container prune --force
     - name: Shrink images
-      run: docker image prune --force --filter label=STOP=YES
+      run: docker image prune --force --filter label=STOP=yes
     - name: Show image
       run: docker image ls -a
 
