Set the label twice.

--- a/utils/docker/Dockerfile.ubuntu.20.04
+++ b/utils/docker/Dockerfile.ubuntu.20.04
@@ -8,6 +8,7 @@
 # Pull base image
 FROM ubuntu:20.04
 LABEL maintainer="daos@daos.groups.io"
+LABEL STOP=no
 
 # Install basic tools
 #RUN apt-get update &&							\
