Update image prune to be same as image ps.
Signed-off-by: Ashley Pittman <ashley@pittman.co.uk>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
     - name: check all
       run: docker image ls -a --filter label=STOP
     - name: Shrink images
-      run: docker image prune --force --filter="label!=STOP=no"
+      run: docker image prune --force -a --filter="label=STOP=yes"
     - name: Show image
       run: docker image ls -a
 
